# pointers-rs

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: miri.yml
scripts/: publish.sh
src/: irc.rs  lib.rs
src/test/: irc.rs  mod.rs
